classDiagram
    class Document {
        +string id
        +string title
        +jsonb content
        +string owner_id
        +string created_at
        +string updated_at
        +string deleted_at
        +isDeleted() boolean
    }

    class PasswordResetToken {
        +string id
        +string user_id
        +string token_hash
        +string expires_at
        +boolean used
        +string created_at
        +isExpired() boolean
        +isValid() boolean
    }

    class User {
        +string id
        +string email
        +string password_hash
        +string name
        +string avatar_url
        +string created_at
    }

    class DocMember {
        +string doc_id
        +string user_id
        +Role role
        +string invited_at
    }

    class DocShare {
        +string id
        +string doc_id
        +string token
        +Role role
        +string created_by
        +string expires_at
        +boolean used
        +string created_at
    }

    class YjsUpdate {
        +number id
        +string doc_id
        +string update
        +string created_at
    }

    class DocSnapshot {
        +string id
        +string doc_id
        +jsonb content
        +string created_at
    }

    class Role {
        <<enumeration>>
        OWNER
        EDITOR
        VIEWER
    }

    class SortOrder {
        <<enumeration>>
        UPDATED_DESC
        UPDATED_ASC
    }

    class TrashService {
        +getTrashDocs(userId: string) Promise~DocumentListItem[]~
        +restoreDoc(docId: string, userId: string) Promise~boolean~
        +permanentDelete(docId: string, userId: string) Promise~boolean~
        +cleanupExpired(days: number) Promise~number~
    }

    class PasswordResetService {
        +requestReset(email: string) Promise~ResetRequestResult~
        +verifyToken(token: string) Promise~TokenVerifyResult~
        +resetPassword(token: string, newPassword: string) Promise~boolean~
    }

    class SearchService {
        +searchDocs(query: string, userId: string, type: string) Promise~DocumentListItem[]~
        +highlightText(text: string, keyword: string) ReactNode
    }

    class ErrorInterceptor {
        +handleNetworkError() void
        +handleBusinessError(code: number, message: string, retry?: Function) void
        +fetchApiWithRetry~T~(url: string, options?: RequestInit) Promise~ApiResponse~T~~
    }

    User "1" --o "*" Document : owns
    User "1" --o "*" PasswordResetToken : has
    Document "1" --o "*" DocMember : has
    Document "1" --o "*" DocShare : has
    Document "1" --o "*" YjsUpdate : persists
    Document "1" --o "*" DocSnapshot : has
    DocMember --> Role : uses
    DocShare --> Role : uses
    TrashService --> Document : manages
    PasswordResetService --> PasswordResetToken : manages
    SearchService --> Document : searches
